Fixed spacing on service details

--- a/styles/liturgical-calendar.less
+++ b/styles/liturgical-calendar.less
@@ -25,6 +25,7 @@
 .liturgical-layout-full .sqs-block-content > ul > li > ul > li,
 .liturgical-layout-full .summary-excerpt > ul > li > ul > li {
     font-style: italic;
+    margin-bottom: 0;
 }
 
 #home-services .summary-title {
